--- a/army-moves.cbp
+++ b/army-moves.cbp
@@ -40,7 +40,9 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="cb.bmp" />
-		<Unit filename="main.cpp" />
+		<Unit filename="include/Game.h" />
+		<Unit filename="src/Game.cpp" />
+		<Unit filename="src/main.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
