--- a/army-moves.cbp
+++ b/army-moves.cbp
@@ -41,11 +41,16 @@
 		</Compiler>
 		<Unit filename="cb.bmp" />
 		<Unit filename="include/Game.h" />
+		<Unit filename="include/Jugador.h" />
+		<Unit filename="include/Mapa.h" />
 		<Unit filename="src/Game.cpp" />
+		<Unit filename="src/Jugador.cpp" />
+		<Unit filename="src/Mapa.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
